Fixed extra space

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ a {
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
+    overflow-x: hidden;
 }
 
 
